--- a/ng-reactive-survey/angular.json
+++ b/ng-reactive-survey/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -66,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-reactive-survey:build"
+            "browserTarget": "ng-reactive-survey:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
