--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
-    "@ngrx/effects": "^10.0.0",
-    "@ngrx/entity": "^10.0.0",
-    "@ngrx/store": "^10.0.0",
-    "@ngrx/store-devtools": "^10.0.0",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/entity": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
+    "@popperjs/core": "^2.5.3",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
