--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -25,6 +25,8 @@
     "@ngrx/entity": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.5.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
