--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -30,6 +30,7 @@
     "@popperjs/core": "^2.5.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -42,6 +43,7 @@
     "@ngrx/schematics": "^10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
