--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.3",
+    "@angular/animations": "^10.1.6",
     "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
@@ -32,6 +32,7 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "ngx-material-timepicker": "^5.5.3",
+    "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
