--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -29,8 +29,10 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.5.3",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "ng2-charts": "^2.4.2",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
