--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "ng2-charts": "^2.4.2",
+    "ngx-cookie-service": "^10.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
