--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "ng-event-source": "^1.0.14",
     "ng2-charts": "^2.4.2",
     "ngx-cookie-service": "^10.1.1",
     "ngx-material-timepicker": "^5.5.3",
