--- a/ng-reactive-survey/package.json
+++ b/ng-reactive-survey/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@ngrx/component": "^10.1.0",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/entity": "^10.0.1",
     "@ngrx/store": "^10.0.1",
